# graphic_graphic_utils_lite

./: BUILD.gn  README.en.md  README.md  README_zh.md  bundle.json  utils.gni
frameworks/: color.cpp  geometry2d.cpp  graphic_math.cpp  graphic_timer.cpp  hal_tick.cpp  mem_api.cpp  pixel_format_utils.cpp  style.cpp  sys_info.cpp  trans_affine.cpp  transform.cpp  version.cpp
frameworks/diagram/common/: paint.cpp
frameworks/diagram/rasterizer/: rasterizer_cells_antialias.cpp  rasterizer_scanline_antialias.cpp  rasterizer_scanline_clip.cpp
frameworks/diagram/transform/: graphic_transform_trans_affine.cpp
frameworks/diagram/vertexgenerate/: graphic_vertex_generate_dash.cpp  graphic_vertex_generate_stroke.cpp  vertex_generate_dash.cpp  vertex_generate_stroke.cpp
frameworks/diagram/vertexprimitive/: geometry_arc.cpp  geometry_curves.cpp  geometry_shorten_path.cpp  graphic_geometry_arc.cpp  graphic_geometry_bezier_arc.cpp  graphic_geometry_curves.cpp
frameworks/graphics/graphic_common/: agg_clip_liang_barsky.cpp  agg_sqrt_tables.cpp  graphic_common_clip_barsky.cpp  graphic_common_clip_operate.cpp
frameworks/graphics/graphic_filter/: agg_image_filters.cpp
frameworks/graphics/graphic_geometry/: agg_arc.cpp  agg_arrowhead.cpp  agg_bezier_arc.cpp  agg_block_allocater.cpp  agg_curves.cpp  agg_line_aa_basics.cpp  agg_pod_bvector.cpp  agg_pod_vector.cpp  agg_rounded_rect.cpp  graphic_geometry_arc.cpp  graphic_geometry_bezier_arc.cpp  graphic_geometry_curves.cpp  graphic_geometry_rounded_rect.cpp
frameworks/graphics/graphic_transform/: agg_trans_affine.cpp  agg_trans_double_path.cpp  agg_trans_single_path.cpp  agg_trans_warp_magnifier.cpp  graphic_transform_trans_affine.cpp
frameworks/graphics/graphic_vertex_generate/: agg_vcgen_contour.cpp  agg_vcgen_dash.cpp  agg_vcgen_markers_term.cpp  agg_vcgen_smooth_poly1.cpp  agg_vcgen_stroke.cpp  graphic_vertex_generate_dash.cpp  graphic_vertex_generate_stroke.cpp
frameworks/graphics/transform/: graphic_transform_trans_affine.cpp
frameworks/graphics/vertexgenerate/: graphic_vertex_generate_dash.cpp  graphic_vertex_generate_stroke.cpp
frameworks/graphics/vertexprimitive/: graphic_geometry_arc.cpp  graphic_geometry_bezier_arc.cpp  graphic_geometry_curves.cpp  graphic_geometry_rounded_rect.cpp
frameworks/hals/: gfx_engines.cpp  hi_fbdev.cpp
interfaces/innerkits/: graphic_config.h  graphic_mutex.h  graphic_neon_pipeline.h  graphic_neon_utils.h  graphic_semaphore.h  graphic_thread.h  graphic_timer.h  hal_cpu.h  hal_tick.h  queue.h
interfaces/innerkits/hals/: gfx_engines.h
interfaces/kits/: color.h  geometry2d.h  graphic_math.h  graphic_types.h  heap_base.h  input_event_info.h  list.h  mem_api.h  rect.h  style.h  sys_info.h  transform.h  vector.h
interfaces/kits/gfx_utils/: color.h  file.h  graphic_buffer.h  graphic_log.h  graphic_math.h  graphic_types.h  rect.h  style.h  trans_affine.h  transform.h  vector.h
interfaces/kits/gfx_utils/diagram/common/: common_basics.h  graphic_common_basics.h  graphic_common_clip_operate.h  graphic_common_gamma_functions.h  graphic_common_gamma_lut.h  graphic_common_math.h  paint.h
interfaces/kits/gfx_utils/diagram/depiction/: depict_adaptor_vertex_generate.h  depict_stroke.h  depict_transform.h  graphic_depict_adaptor_vertex_generate.h  graphic_depict_curve.h  graphic_depict_dash.h  graphic_depict_stroke.h  graphic_depict_transform.h
interfaces/kits/gfx_utils/diagram/imageaccessor/: graphic_image_accessors.h
interfaces/kits/gfx_utils/diagram/imagefilter/: filter_blur.h  graphic_filter_blur.h
interfaces/kits/gfx_utils/diagram/rasterizer/: graphic_rasterizer_cells_antialias.h  graphic_rasterizer_scanline_antialias.h  graphic_rasterizer_scanline_clip.h  rasterizer_cells_antialias.h
interfaces/kits/gfx_utils/diagram/scanline/: geometry_scanline.h  graphic_geometry_scanline.h
interfaces/kits/gfx_utils/diagram/spancolorfill/: fill_gradient.h  graphic_spancolor_fill_base.h  graphic_spancolor_fill_gradient.h  graphic_spancolor_fill_gradient_lut.h  graphic_spancolor_fill_image_rgba.h  graphic_spancolor_fill_interpolator.h  graphic_spancolor_fill_pattern_rgba.h
interfaces/kits/gfx_utils/diagram/transform/: graphic_transform_affine.h  graphic_transform_image_accessors.h
interfaces/kits/gfx_utils/diagram/vertexgenerate/: graphic_vertex_generate_dash.h  graphic_vertex_generate_stroke.h  vertex_generate_dash.h  vertex_generate_stroke.h
interfaces/kits/gfx_utils/diagram/vertexprimitive/: geometry_curves.h  geometry_math_stroke.h  geometry_path_storage.h  geometry_range_adapter.h  graphic_geometry_arc.h  graphic_geometry_bezier_arc.h  graphic_geometry_curves.h  graphic_geometry_dda_line.h  graphic_geometry_math_stroke.h  graphic_geometry_path_storage.h  graphic_geometry_plaindata_array.h  graphic_geometry_plaindata_blockvector.h  graphic_geometry_plaindata_vector.h  graphic_geometry_range_adapter.h  (+2 more)
test/: BUILD.gn  color_unit_test.cpp  geometry2d_unit_test.cpp  graphic_math_unit_test.cpp  graphic_timer_test.cpp  list_unit_test.cpp  rect_unit_test.cpp  style_unit_test.cpp  transform_unit_test.cpp  vector_unit_test.cpp
(+180 files in other folders)
